src/test/ui/coherence/coherence-cross-crate-conflict.stderr
error[E0119]: conflicting implementations of trait `trait_impl_conflict::Foo` for type `isize`:
  --> $DIR/coherence-cross-crate-conflict.rs:9:1
   |
LL | impl<A> Foo for A {
   | ^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `trait_impl_conflict`:
           - impl Foo for isize;

error[E0210]: type parameter `A` must be used as the type parameter for some local type (e.g., `MyStruct<A>`)
  --> $DIR/coherence-cross-crate-conflict.rs:9:6
   |
LL | impl<A> Foo for A {
   |      ^ type parameter `A` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0210.
For more information about an error, try `rustc --explain E0119`.
